--- a/README.rdoc
+++ b/README.rdoc
@@ -1,10 +1,8 @@
 == README
 
-Coder Manual Project Application
-Subscription-based web application
-http://codermanual.com
 
-Things you may want to cover:
+
+Things  to cover:
 
 * Ruby version
 
@@ -25,5 +23,4 @@ Things you may want to cover:
 * ...
 
 
-Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
